--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css">
         <script type="text/javascript" src="index.js"></script>
-        <title> MarCorp&reg;| Login</title>
+        <title> SAAC&reg;| Login</title>
     </head>
     <body>
         <div class="container">
             <div class="row">
+                <div class="col-12 text-center">
+                    <h3><b>Bem Vindo ao Sistema de Agendamento de Atendimento &agrave; Clientes</b></h3><br><br>
+                </div>
                 <div class="col-12">
-                    <h3>Bem Vindo ao Sistema de Agendamento de Atendimento</h3><br><br>
-                    <h6>Para obter acesso, favor autenticar-se</h6>
+                    <h6><b>Para obter acesso, favor autenticar-se</b></h6>
                 </div>
             </div>
             
