mecanismo de busca

--- a/home.html
+++ b/home.html
@@ -65,8 +65,37 @@
             </div>
 
             <div id="relatorio">
-                ** relatorio vir aqui!!! *** 
+                <div class="row">
+                    <div class="col-1">
+                        Protocolo
+                    </div>
+
+                    <div class="col-2">
+                        Cliente
+                    </div>
+
+                    <div class="col-2">
+                        Email
+                    </div>
+
+                    <div class="col-2">
+                        Celular
+                    </div>
+
+                    <div class="col-1">
+                        Agencia
+                    </div>
+
+                    <div class="col-2">
+                        Data/Hora
+                    </div>
+
+                    <div class="col-2">
+                        Obs
+                    </div>
+                </div>
             </div>
+        
         </div>
 
 
