--- a/agendamento.html
+++ b/agendamento.html
@@ -91,8 +91,11 @@
             <div class="row">
                 <div class="col-12">
                     <button class="btn btn-primary btn-lg float-right" onclick="enviarDados()">Cadastrar</button>
+                    <button class="btn btn-primary btn-lg float-left" onclick="logout()">Logout</button>
                 </div>    
-            </div>  
+            </div> 
+
+
 
 
 
