--- a/home.html
+++ b/home.html
@@ -95,6 +95,12 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-12"></div>
+                    <button class="btn btn-primary btn-lg float-left" onclick="logout()">Logout</button>
+                </div>    
+            </div>  
         
         </div>
 
