pagina principal com menu de selecao

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
         <!-- css + javascript do HOME -->
         <link rel="stylesheet" href="home.css">
         <script type="text/javascript" src="home.js"></script>
-        <title> SAAC&reg;| Login</title>
+        <title> SAAC&reg;| Consulta</title>
 
 
     </head>
@@ -19,6 +19,12 @@
                 </div>
 
             </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <button class="btn btn-primary btn-sm float-right" onclick="logout()">Logout</button>
+                </div>    
+            </div>  
 
             <div class="row" id="linhaUser">
                 <div id="fotoUSER" class="col-xl-2 col-lg-2 col-md-4 col-sm-4 col-xs-4">
@@ -96,11 +102,7 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12"></div>
-                    <button class="btn btn-primary btn-lg float-left" onclick="logout()">Logout</button>
-                </div>    
-            </div>  
+
         
         </div>
 
