--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
                 <div class="col-12 text-center">
                     <h3><b>Bem Vindo ao Sistema de Agendamento de Atendimento &agrave; Clientes</b></h3><br><br>
                 </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <button class="btn btn-primary btn-sm float-right" onclick="logout()">Logout</button>
+                </div>    
+            </div>
+
+            <div class="row">     
                 <div class="col-12">
                     <h6><b>Para obter acesso, favor autenticar-se</b></h6>
                 </div>
