--- a/agendamento.html
+++ b/agendamento.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="agendamento.css">
         <script type="text/javascript" src="agendamento.js"></script>
-        <title> SAAC&reg;| Login</title>
+        <title> SAAC&reg;| Agendamento</title>
     </head>
 
     <body onload="carregarAgencias()">
@@ -14,6 +14,12 @@
                     <h3 id="titulo"> Sistema de Agendamento de Atendimento &agrave; Clientes </h3>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <button class="btn btn-primary btn-sm float-right" onclick="logout()">Logout</button>
+                </div>    
+            </div> 
 
             <div class="row" > 
                 <div class="col-12">
@@ -91,7 +97,6 @@
             <div class="row">
                 <div class="col-12">
                     <button class="btn btn-primary btn-lg float-right" onclick="enviarDados()">Cadastrar</button>
-                    <button class="btn btn-primary btn-lg float-left" onclick="logout()">Logout</button>
                 </div>    
             </div> 
 
